--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -163,14 +163,49 @@ jobs:
       container: false
     steps:
       - IN: prod_release
-      - IN: w2k16_dd_repo
-        switch: off
       - IN: w2k16_dd_img
+        switch: off
+      - TASK:
+          name: tag_img
+          runtime:
+            options:
+              env:
+                - RES_VER: "prod_release"
+                - RES_IMG: "w2k16_dd_img"
+          script:
+            - $script:REL_VER=$(shipctl get_resource_version_key "$env:RES_VER" "versionName")
+            - |
+               $script:REPO_COMMIT=$(shipctl get_resource_version_key "$env:RES_IMG" "IMG_REPO_COMMIT_SHA")
+               $script:IMG_NAME=$(shipctl get_resource_version_key "$env:RES_IMG" "sourceName")
+               $script:UP_IMG_TAG=$(shipctl get_resource_version_key "$env:RES_IMG" "versionName")
+               $script:DH_USR_NAME=$(shipctl get_integration_resource_field "$env:RES_IMG" "userName")
+               $script:DH_PASS=$(shipctl get_integration_resource_field "$env:RES_IMG" "password")
+            - docker login -u "$DH_USR_NAME" -p "$DH_PASS"
+            - docker pull "${IMG_NAME}:${UP_IMG_TAG}"
+            - |
+               docker tag "${IMG_NAME}:${UP_IMG_TAG}" "${IMG_NAME}:${REL_VER}"
+               docker push "${IMG_NAME}:${REL_VER}"
+            - |
+               docker tag "${IMG_NAME}:${UP_IMG_TAG}" "${IMG_NAME}:latest"
+               docker push "${IMG_NAME}:${REL_VER}"
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
+
+  - name: w2k16_repo_tag
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prod_release
+      - IN: w2k16_dd_img
+        switch: off
+      - IN: w2k16_dd_repo
         switch: off
       - IN: shipit_gh_ssh
         switch: off
       - TASK:
-          name: w2k16_tag
+          name: tag_repo
           runtime:
             options:
               env:
@@ -180,31 +215,18 @@ jobs:
                 - GIT_PATH: "git@github.com:dry-dock/w16.git"
           script:
             - REL_VER=$(shipctl get_resource_version_key "$RES_VER" "versionName")
-            - |
-               REPO_COMMIT=$(shipctl get_resource_version_key "$RES_IMG" "IMG_REPO_COMMIT_SHA")
-               IMG_NAME=$(shipctl get_resource_version_key "$RES_IMG" "sourceName")
-               UP_IMG_TAG=$(shipctl get_resource_version_key "$RES_IMG" "versionName")
-               DH_USR_NAME=$(shipctl get_integration_resource_field "$RES_IMG" "userName")
-               DH_PASS=$(shipctl get_integration_resource_field "$RES_IMG" "password")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_IMG" "IMG_REPO_COMMIT_SHA")
             - |
                pushd $(shipctl get_resource_meta "shipit_gh_ssh")
                  shipctl get_json_value integration.json 'privateKey' > gh_ssh.key
                  chmod 600 gh_ssh.key
                  ssh-add gh_ssh.key
                popd
-            - docker login -u $DH_USR_NAME -p $DH_PASS
-            - docker pull "$IMG_NAME:$UP_IMG_TAG"
-            - |
-               docker tag "$IMG_NAME:$UP_IMG_TAG" "$IMG_NAME:$REL_VER"
-               docker push "$IMG_NAME:$REL_VER"
-            - |
-               docker tag "$IMG_NAME:$UP_IMG_TAG" "$IMG_NAME:latest"
-               docker push "$IMG_NAME:latest"
             - pushd $(shipctl get_resource_state "$RES_REPO")
             - |
                git remote add up $GIT_PATH
                git remote -v
-               git checkout master
+               git checkout $REPO_COMMIT
             - |
                git pull --tags
                if git tag -d $REL_VER; then
@@ -216,7 +238,7 @@ jobs:
                git push up $REL_VER
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "TAG_COMMIT_SHA=$REPO_COMMIT" "TAG_IMG=$REL_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
 
   - name: w2k16dotnetcore_x8664_tag
     type: runSh
@@ -227,14 +249,49 @@ jobs:
       container: false
     steps:
       - IN: prod_release
-      - IN: w2k16dotnetcore_dd_repo
-        switch: off
       - IN: w2k16dotnetcore_dd_img
+        switch: off
+      - TASK:
+          name: tag_img
+          runtime:
+            options:
+              env:
+                - RES_VER: "prod_release"
+                - RES_IMG: "w2k16dotnetcore_dd_img"
+          script:
+            - $script:REL_VER=$(shipctl get_resource_version_key "$env:RES_VER" "versionName")
+            - |
+               $script:REPO_COMMIT=$(shipctl get_resource_version_key "$env:RES_IMG" "IMG_REPO_COMMIT_SHA")
+               $script:IMG_NAME=$(shipctl get_resource_version_key "$env:RES_IMG" "sourceName")
+               $script:UP_IMG_TAG=$(shipctl get_resource_version_key "$env:RES_IMG" "versionName")
+               $script:DH_USR_NAME=$(shipctl get_integration_resource_field "$env:RES_IMG" "userName")
+               $script:DH_PASS=$(shipctl get_integration_resource_field "$env:RES_IMG" "password")
+            - docker login -u "$DH_USR_NAME" -p "$DH_PASS"
+            - docker pull "${IMG_NAME}:${UP_IMG_TAG}"
+            - |
+               docker tag "${IMG_NAME}:${UP_IMG_TAG}" "${IMG_NAME}:${REL_VER}"
+               docker push "${IMG_NAME}:${REL_VER}"
+            - |
+               docker tag "${IMG_NAME}:${UP_IMG_TAG}" "${IMG_NAME}:latest"
+               docker push "${IMG_NAME}:${REL_VER}"
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
+
+  - name: w2k16dotnetcore_repo_tag
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prod_release
+      - IN: w2k16dotnetcore_dd_img
+        switch: off
+      - IN: w2k16dotnetcore_dd_repo
         switch: off
       - IN: shipit_gh_ssh
         switch: off
       - TASK:
-          name: w2k16dotnetcore_tag
+          name: tag_repo
           runtime:
             options:
               env:
@@ -244,31 +301,18 @@ jobs:
                 - GIT_PATH: "git@github.com:dry-dock/w16dotnetcore.git"
           script:
             - REL_VER=$(shipctl get_resource_version_key "$RES_VER" "versionName")
-            - |
-               REPO_COMMIT=$(shipctl get_resource_version_key "$RES_IMG" "IMG_REPO_COMMIT_SHA")
-               IMG_NAME=$(shipctl get_resource_version_key "$RES_IMG" "sourceName")
-               UP_IMG_TAG=$(shipctl get_resource_version_key "$RES_IMG" "versionName")
-               DH_USR_NAME=$(shipctl get_integration_resource_field "$RES_IMG" "userName")
-               DH_PASS=$(shipctl get_integration_resource_field "$RES_IMG" "password")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_IMG" "IMG_REPO_COMMIT_SHA")
             - |
                pushd $(shipctl get_resource_meta "shipit_gh_ssh")
                  shipctl get_json_value integration.json 'privateKey' > gh_ssh.key
                  chmod 600 gh_ssh.key
                  ssh-add gh_ssh.key
                popd
-            - docker login -u $DH_USR_NAME -p $DH_PASS
-            - docker pull "$IMG_NAME:$UP_IMG_TAG"
-            - |
-               docker tag "$IMG_NAME:$UP_IMG_TAG" "$IMG_NAME:$REL_VER"
-               docker push "$IMG_NAME:$REL_VER"
-            - |
-               docker tag "$IMG_NAME:$UP_IMG_TAG" "$IMG_NAME:latest"
-               docker push "$IMG_NAME:latest"
             - pushd $(shipctl get_resource_state "$RES_REPO")
             - |
                git remote add up $GIT_PATH
                git remote -v
-               git checkout master
+               git checkout $REPO_COMMIT
             - |
                git pull --tags
                if git tag -d $REL_VER; then
@@ -280,7 +324,7 @@ jobs:
                git push up $REL_VER
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "TAG_COMMIT_SHA=$REPO_COMMIT" "TAG_IMG=$REL_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
 
   - name: w2k16aspnetcore_x8664_tag
     type: runSh
@@ -291,48 +335,70 @@ jobs:
       container: false
     steps:
       - IN: prod_release
-      - IN: w2k16aspnetcore_dd_repo
-        switch: off
       - IN: w2k16aspnetcore_dd_img
+        switch: off
+      - TASK:
+          name: tag_img
+          runtime:
+            options:
+              env:
+                - RES_VER: "prod_release"
+                - RES_IMG: "w2k16aspnetcore_dd_img"
+          script:
+            - $script:REL_VER=$(shipctl get_resource_version_key "$env:RES_VER" "versionName")
+            - |
+               $script:REPO_COMMIT=$(shipctl get_resource_version_key "$env:RES_IMG" "IMG_REPO_COMMIT_SHA")
+               $script:IMG_NAME=$(shipctl get_resource_version_key "$env:RES_IMG" "sourceName")
+               $script:UP_IMG_TAG=$(shipctl get_resource_version_key "$env:RES_IMG" "versionName")
+               $script:DH_USR_NAME=$(shipctl get_integration_resource_field "$env:RES_IMG" "userName")
+               $script:DH_PASS=$(shipctl get_integration_resource_field "$env:RES_IMG" "password")
+            - docker login -u "$DH_USR_NAME" -p "$DH_PASS"
+            - docker pull "${IMG_NAME}:${UP_IMG_TAG}"
+            - |
+               docker tag "${IMG_NAME}:${UP_IMG_TAG}" "${IMG_NAME}:${REL_VER}"
+               docker push "${IMG_NAME}:${REL_VER}"
+            - |
+               docker tag "${IMG_NAME}:${UP_IMG_TAG}" "${IMG_NAME}:latest"
+               docker push "${IMG_NAME}:${REL_VER}"
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
+
+  - name: w2k16aspnetcore_repo_tag
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prod_release
+      - IN: w2k16aspnetcore_dd_img
+        switch: off
+      - IN: w2k16aspnetcore_dd_repo
         switch: off
       - IN: shipit_gh_ssh
         switch: off
       - TASK:
-          name: w2k16aspnetcore_tag
+          name: tag_repo
           runtime:
             options:
               env:
                 - RES_VER: "prod_release"
                 - RES_IMG: "w2k16aspnetcore_dd_img"
                 - RES_REPO: "w2k16aspnetcore_dd_repo"
-                - GIT_PATH: "git@github.com:dry-dock/w16.git"
+                - GIT_PATH: "git@github.com:dry-dock/w16aspnetcore.git"
           script:
             - REL_VER=$(shipctl get_resource_version_key "$RES_VER" "versionName")
-            - |
-               REPO_COMMIT=$(shipctl get_resource_version_key "$RES_IMG" "IMG_REPO_COMMIT_SHA")
-               IMG_NAME=$(shipctl get_resource_version_key "$RES_IMG" "sourceName")
-               UP_IMG_TAG=$(shipctl get_resource_version_key "$RES_IMG" "versionName")
-               DH_USR_NAME=$(shipctl get_integration_resource_field "$RES_IMG" "userName")
-               DH_PASS=$(shipctl get_integration_resource_field "$RES_IMG" "password")
+            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_IMG" "IMG_REPO_COMMIT_SHA")
             - |
                pushd $(shipctl get_resource_meta "shipit_gh_ssh")
                  shipctl get_json_value integration.json 'privateKey' > gh_ssh.key
                  chmod 600 gh_ssh.key
                  ssh-add gh_ssh.key
                popd
-            - docker login -u $DH_USR_NAME -p $DH_PASS
-            - docker pull "$IMG_NAME:$UP_IMG_TAG"
-            - |
-               docker tag "$IMG_NAME:$UP_IMG_TAG" "$IMG_NAME:$REL_VER"
-               docker push "$IMG_NAME:$REL_VER"
-            - |
-               docker tag "$IMG_NAME:$UP_IMG_TAG" "$IMG_NAME:latest"
-               docker push "$IMG_NAME:latest"
             - pushd $(shipctl get_resource_state "$RES_REPO")
             - |
                git remote add up $GIT_PATH
                git remote -v
-               git checkout master
+               git checkout $REPO_COMMIT
             - |
                git pull --tags
                if git tag -d $REL_VER; then
@@ -344,7 +410,7 @@ jobs:
                git push up $REL_VER
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "TAG_COMMIT_SHA=$REPO_COMMIT" "TAG_IMG=$REL_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=${REL_VER}" "TAG_COMMIT_SHA=${REPO_COMMIT}" "TAG_IMG=${REL_VER}"
 
 ##### GCE IMAGES ########
   - name: prep_w2k16_x8664_gce_img
