--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1650,7 +1650,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqKick_repo_file_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
       - IN: u14repLib_x8664_tag
       - IN: buildami_repo
@@ -1740,7 +1740,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -1830,7 +1830,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -1920,7 +1920,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -2010,7 +2010,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -2100,7 +2100,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -2190,7 +2190,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -2280,7 +2280,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -2370,7 +2370,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -2460,7 +2460,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -2550,7 +2550,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -2640,7 +2640,7 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: u14repLib_x8664_tag
-      - IN: u14reqProc_dd_tag
+      #- IN: u14reqProc_dd_tag
       - IN: u14reqProc_dd_img
         switch: off
       - IN: buildami_repo
