--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1496,10 +1496,10 @@ jobs:
                export REL_VER_DASH=${REL_VER//./-}
                export FAM_NAME=$REL_VER_DASH"-final-u16-x86-64"
             - |
-               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "BASE_IMG_RES" "IMAGE_FAM_NAME")
-               export ARCHITECTURE=$(shipctl get_resource_version_key "BASE_IMG_RES" "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "BASE_IMG_RES" "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "BASE_IMG_RES" "DOCKER_VER")
+               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES "IMAGE_FAM_NAME")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -1587,9 +1587,9 @@ jobs:
                export FAM_NAME=$IMG_VER_DASH"-final-u16-x86-64"
                export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export ARCHITECTURE=$(shipctl get_resource_version_key "BASE_IMG_RES" "ARCHITECTURE")
-               export OS=$(shipctl get_resource_version_key "BASE_IMG_RES" "OS")
-               export DOCKER_VER=$(shipctl get_resource_version_key "BASE_IMG_RES" "DOCKER_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES "DOCKER_VER")
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
